examples/test/testpolicy1548.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1548
  namespace: namespace366
spec:
  podSelector:
    matchLabels:
      key21: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value31
          key11: value6
      podSelector:
        matchLabels:
          key29: value29
          key12: value20
          key48: value37
